add multiplex paper

--- a/draw_red_networks.html
+++ b/draw_red_networks.html
@@ -133,6 +133,7 @@
         <ul>
             <li><a href="#" class="papers" id="SIAM_review_Newman">SIAM review paper</a></li>
             <li><a href="#" class="papers" id="CRISPR_cell">CRISPR review paper</a></li>
+            <li><a href="#" class="papers" id="multiplex_PRX">Multiplex paper</a></li>
         </ul>
     </div>
 
