--- a/draw_red_networks.html
+++ b/draw_red_networks.html
@@ -444,7 +444,7 @@
 
 
                     $(".node").show()
-                    for (var y = cur_year+1; y <= 2014; y++) {
+                    for (var y = (cur_year+1); y <= max_year; y++) {
                         $(".py_"+y).hide()
                     }
 
