--- a/draw_red_networks.html
+++ b/draw_red_networks.html
@@ -161,7 +161,7 @@
 
             var json_path = $(this).attr('id') + ".json";
             console.log(json_path);
-            d3.d3.select(".plot_area").selectAll("svg > *").remove();
+            d3.select(".plot_area").selectAll("svg > *").remove();
 
             var svg = d3.select(".plot_area").append("svg")
             .attr("width", width)
