Add wang,song.barabasi paper

--- a/draw_red_networks.html
+++ b/draw_red_networks.html
@@ -146,6 +146,7 @@
             <li><a href="#" class="papers" id="network_medicine_review">Network medicine review</a></li>
             <li><a href="#" class="papers" id="multiplex_PRX">Multiplex paper</a></li>
             <li><a href="#" class="papers" id="controlability_Natcomm">Controlability paper</a></li>
+            <li><a href="#" class="papers" id="WSB_model">WSB paper</a></li>
         </ul>
     </div>
 
