Graphene review in chemical review

--- a/draw_red_networks.html
+++ b/draw_red_networks.html
@@ -141,11 +141,14 @@
 
     <div class="paper_list">
         <ul>
+            <p> Reviews</p>
             <li><a href="#" class="papers" id="SIAM_review_Newman">SIAM review</a></li>
             <li><a href="#" class="papers" id="CRISPR_cell">CRISPR review</a></li>
             <li><a href="#" class="papers" id="network_medicine_review">Network medicine review</a></li>
             <li><a href="#" class="papers" id="Graphene_RMP">Graphene review in RMP</a></li>
+            <li><a href="#" class="papers" id="Graphene_Chemical_review">Graphene review in Chemical Review</a></li>
             </br>
+            <p> Normal papers</p>
             <li><a href="#" class="papers" id="multiplex_PRX">Multiplex paper</a></li>
             <li><a href="#" class="papers" id="controlability_Natcomm">Controlability paper</a></li>
             <li><a href="#" class="papers" id="WSB_model">WSB paper</a></li>
