--- a/draw_red_networks.html
+++ b/draw_red_networks.html
@@ -657,7 +657,8 @@
         <ul>
             <li>Zoom in/out: scroll wheel up/down.</li>
             <li>Panning: click the background and drag it.</li>
-            <li>Cursor on a node: it pop up information of a paper.</li>
+            <li>Cursor on a node: it pops up information of a paper.</li>
+            <li>Click a node: metadata of the chosen node shows below timeline. </li>
             <li>Move a node: click any node and drag it.</li>
             <li>Change year: move a handle on a slide bar below the graph</li>
             <li>Colors: node strength in each year. It scales automatically.</li>
