Add community review

--- a/draw_red_networks.html
+++ b/draw_red_networks.html
@@ -155,6 +155,7 @@
         <ul>
             <p> Reviews</p>
             <li><a href="#" class="papers" id="SIAM_review_Newman">SIAM review</a></li>
+            <li><a href="#" class="papers" id="community_in_graph">community review</a></li>
             <li><a href="#" class="papers" id="CRISPR_cell">CRISPR review</a></li>
             <li><a href="#" class="papers" id="network_medicine_review">Network medicine review</a></li>
             <li><a href="#" class="papers" id="Graphene_RMP">Graphene review in RMP</a></li>
