add deep learning json

--- a/draw_red_networks.html
+++ b/draw_red_networks.html
@@ -166,6 +166,7 @@
             <li><a href="#" class="papers" id="CRISPR_cell">CRISPR review</a></li>
             <li><a href="#" class="papers" id="Graphene_RMP">Graphene review in RMP</a></li>
             <li><a href="#" class="papers" id="Graphene_Chemical_review">Graphene review in Chemical Review</a></li>
+            <li><a href="#" class="papers" id="DL_review">Deep learning review</a></li>
             </br>
             <p> Normal papers</p>
             <li><a href="#" class="papers" id="multiplex_PRX">Multiplex paper</a></li>
