Make a scroll bar in paper list

--- a/draw_red_networks.html
+++ b/draw_red_networks.html
@@ -109,6 +109,8 @@
 
     .paper_list {
         position:absolute; 
+        overflow:scroll; 
+        height:800px;
         line-height:1.7em;
         top:300px; 
         left:1140px;
@@ -172,6 +174,9 @@
             <li><a href="#" class="papers" id="multiplex_PRX">Multiplex paper</a></li>
             <li><a href="#" class="papers" id="controlability_Natcomm">Controlability paper</a></li>
             <li><a href="#" class="papers" id="WSB_model">WSB paper</a></li>
+            </br>
+            <p> Nobel prize in Physics </p>
+            
         </ul>
     </div>
 
