add link in a main page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <h1>Hello world</h1>
 
 <p><a href="./draw_red_networks.html">Draw cocitation networks</a></p>
+<br>
+<p><a href="./nobel_prize_physics.html">Draw networks for Nobel prize papers - physics</a></p>
