link data to webpage

--- a/nobel_prize_physics.html
+++ b/nobel_prize_physics.html
@@ -163,7 +163,8 @@
     <div class="paper_list">
         <ul>
             <p> Reviews</p>
-            <li><a href="#" class="papers" id="physics_2011-WOS:000076040700001">2011</a></li>
+            <li><a href="#" class="papers" id="physics_2011-WOS:000076040700001">2011-1</a></li>
+            <li><a href="#" class="papers" id="physics_2011-WOS:000184951100010">2011-2</a></li>
             
             
         </ul>
