--- a/nobel_prize_physics.html
+++ b/nobel_prize_physics.html
@@ -165,6 +165,8 @@
             <p> Reviews</p>
             <li><a href="#" class="papers" id="physics_2011-WOS:000076040700001">2011-1</a></li>
             <li><a href="#" class="papers" id="physics_2011-WOS:000184951100010">2011-2</a></li>
+            <li><a href="#" class="papers" id="physics_2011-WOS:000081011700004">2011-3</a></li>
+            <li><a href="#" class="papers" id="physics_2005-WOS:000174348100050">2005-1</a></li>
             
             
         </ul>
