--- a/nobel_prize_physics.html
+++ b/nobel_prize_physics.html
@@ -173,6 +173,7 @@
             <li><a href="#" class="papers" id="physics_2003-WOS:A1972N321800001">2003-1</a></li>
             <li><a href="#" class="papers" id="physics_1995-WOS:A1957WH65200001">1995-1</a></li>
             <li><a href="#" class="papers" id="physics_1994-WOS:A1955WT23000001">1994-1</a></li>
+            <li><a href="#" class="papers" id="physics_1994-WOS:A1963WP13400001">1994-2</a></li>
             
         </ul>
     </div>
