--- a/nobel_prize_physics.html
+++ b/nobel_prize_physics.html
@@ -163,6 +163,7 @@
     <div class="paper_list">
         <ul>
             <p> Reviews</p>
+            <li><a href="#" class="papers" id="physics_2013-WOS:A1986AYA0800001">2013-1</a></li>
             <li><a href="#" class="papers" id="physics_2011-WOS:000076040700001">2011-1</a></li>
             <li><a href="#" class="papers" id="physics_2011-WOS:000184951100010">2011-2</a></li>
             <li><a href="#" class="papers" id="physics_2011-WOS:000081011700004">2011-3</a></li>
@@ -170,6 +171,8 @@
             <li><a href="#" class="papers" id="physics_2008-WOS:A1984TL53400001">2008-2</a></li>
             <li><a href="#" class="papers" id="physics_2008-WOS:A1986AYA0800001">2008-3</a></li>
             <li><a href="#" class="papers" id="physics_2005-WOS:000174348100050">2005-1</a></li>
+            <li><a href="#" class="papers" id="physics_2005-WOS:A1984SY39200001">2005-2</a></li>            
+            <li><a href="#" class="papers" id="physics_2005-WOS:A19656494100001">2005-3</a></li>            
             <li><a href="#" class="papers" id="physics_2003-WOS:A1972N321800001">2003-1</a></li>
             <li><a href="#" class="papers" id="physics_1995-WOS:A1957WH65200001">1995-1</a></li>
             <li><a href="#" class="papers" id="physics_1994-WOS:A1955WT23000001">1994-1</a></li>
