--- a/nobel_prize_physics.html
+++ b/nobel_prize_physics.html
@@ -174,6 +174,7 @@
             <li><a href="#" class="papers" id="physics_2005-WOS:A1984SY39200001">2005-2</a></li>            
             <li><a href="#" class="papers" id="physics_2005-WOS:A19656494100001">2005-3</a></li>            
             <li><a href="#" class="papers" id="physics_2003-WOS:A1972N321800001">2003-1</a></li>
+            <li><a href="#" class="papers" id="physics_2003-WOS:A1975AA16300004">2003-2</a></li>
             <li><a href="#" class="papers" id="physics_1995-WOS:A1957WH65200001">1995-1</a></li>
             <li><a href="#" class="papers" id="physics_1994-WOS:A1955WT23000001">1994-1</a></li>
             <li><a href="#" class="papers" id="physics_1994-WOS:A1963WP13400001">1994-2</a></li>
