--- a/nobel_prize_physics.html
+++ b/nobel_prize_physics.html
@@ -167,8 +167,11 @@
     <div class="paper_list">
         <ul>
             <p> Novel prize</p>
-            <li><a href="#" class="papers" id="physics_1990-WOS:A1971L102200003">1990</a></li>
-            
+            <li><a href="#" class="papers" id="physics_1990-WOS:A1971L102200003">1990-1</a></li>
+            <li><a href="#" class="papers" id="physics_1990-WOS:A1978ES49800001">1990-2</a></li>
+            <li><a href="#" class="papers" id="physics_1990-WOS:A1979HS68100001">1990-3</a></li>
+            <li><a href="#" class="papers" id="physics_1992-WOS:A1985AVT3800028">1992</a></li>
+            <li><a href="#" class="papers" id="physics_1993-WOS:A1982PJ96800005">1993</a></li>
         </ul>
     </div>
 
