add data and add link for 1994

--- a/nobel_prize_physics.html
+++ b/nobel_prize_physics.html
@@ -172,6 +172,8 @@
             <li><a href="#" class="papers" id="physics_1990-WOS:A1979HS68100001">1990-3</a></li>
             <li><a href="#" class="papers" id="physics_1992-WOS:A1985AVT3800028">1992</a></li>
             <li><a href="#" class="papers" id="physics_1993-WOS:A1982PJ96800005">1993</a></li>
+            <li><a href="#" class="papers" id="physics_1994-WOS:A1955WT23000001">1994</a></li>
+            <li><a href="#" class="papers" id="physics_1994-WOS:A1963WP13400001">1994</a></li>
         </ul>
     </div>
 
