--- a/nobel_prize_physics.html
+++ b/nobel_prize_physics.html
@@ -174,6 +174,46 @@
             <li><a href="#" class="papers" id="physics_1993-WOS:A1982PJ96800005">1993</a></li>
             <li><a href="#" class="papers" id="physics_1994-WOS:A1955WT23000001">1994</a></li>
             <li><a href="#" class="papers" id="physics_1994-WOS:A1963WP13400001">1994</a></li>
+            <li><a href="#" class="papers" id="physics_1995-WOS:A1957WH65200001">1995-1</a></li>
+            <li><a href="#" class="papers" id="physics_1995-WOS:A1979HZ13700001">1995-2</a></li>
+            <li><a href="#" class="papers" id="physics_1995-WOS:A1981MW36900001">1995-3</a></li>
+            <li><a href="#" class="papers" id="physics_1996-WOS:A1982PX24900001">1996-1</a></li>
+            <li><a href="#" class="papers" id="physics_1996-WOS:A1988L435100020">1996-2</a></li>
+            <li><a href="#" class="papers" id="physics_1997-WOS:A1994NQ72700001">1997-1</a></li>
+            <li><a href="#" class="papers" id="physics_1997-WOS:A1994NT36300010">1997-2</a></li>            
+            <li><a href="#" class="papers" id="physics_1998-WOS:A1989AA97200001">1998-1</a></li>
+            <li><a href="#" class="papers" id="physics_1998-WOS:A1991GM72900001">1998-2</a></li>
+            <li><a href="#" class="papers" id="physics_2000-WOS:A1988R466300002">2000</a></li>
+            <li><a href="#" class="papers" id="physics_2002-WOS:A1990DR56600001">2002</a></li>
+            <li><a href="#" class="papers" id="physics_2003-WOS:A1971K573200002">2003-1</a></li>
+            <li><a href="#" class="papers" id="physics_2003-WOS:A1972N321800001">2003-2</a></li>
+            <li><a href="#" class="papers" id="physics_2003-WOS:A1975AA16300004">2003-3</a></li>
+            <li><a href="#" class="papers" id="physics_2003-WOS:A1994QE12700001">2003-4</a></li>
+            <li><a href="#" class="papers" id="physics_2004-WOS:A1986AYA0800001">2004</a></li>
+            <li><a href="#" class="papers" id="physics_2005-WOS:000174348100050">2005-1</a></li>
+            <li><a href="#" class="papers" id="physics_2005-WOS:A1984SY39200001">2005-2</a></li>
+            <li><a href="#" class="papers" id="physics_2005-WOS:A19656494100001">2005-3</a></li>
+            <li><a href="#" class="papers" id="physics_2006-WOS:A1993LV53200001">2006-1</a></li>
+            <li><a href="#" class="papers" id="physics_2006-WOS:A1996UV18600001">2006-2</a></li>
+            <li><a href="#" class="papers" id="physics_2007-WOS:000172240500038">2007</a></li>
+            <li><a href="#" class="papers" id="physics_2008-WOS:A1982PH41600001">2008-1</a></li>
+            <li><a href="#" class="papers" id="physics_2008-WOS:A1984TL53400001">2008-2</a></li>
+            <li><a href="#" class="papers" id="physics_2008-WOS:A1986AYA0800001">2008-3</a></li>
+            <li><a href="#" class="papers" id="physics_2009-WOS:A1997WG42500001">2009</a></li>
+            <li><a href="#" class="papers" id="physics_2011-WOS:000076040700001">2011-1</a></li>
+            <li><a href="#" class="papers" id="physics_2011-WOS:000081011700004">2011-2</a></li>
+            <li><a href="#" class="papers" id="physics_2011-WOS:000184951100010">2011-3</a></li>
+            <li><a href="#" class="papers" id="physics_2012-WOS:000080050500001">2012-1</a></li>
+            <li><a href="#" class="papers" id="physics_2012-WOS:000170126800004">2012-2</a></li>
+            <li><a href="#" class="papers" id="physics_2012-WOS:000172250600001">2012-3</a></li>
+            <li><a href="#" class="papers" id="physics_2013-WOS:A1986AYA0800001">2013</a></li>
+            <li><a href="#" class="papers" id="physics_2014-WOS:000080856300001">2014-1</a></li>
+            <li><a href="#" class="papers" id="physics_2014-WOS:A1994PA30500001">2014-2</a></li>
+            <li><a href="#" class="papers" id="physics_2016-WOS:000077004600001">2016-1</a></li>
+            <li><a href="#" class="papers" id="physics_2016-WOS:A1994QE12700001">2016-2</a></li>
+
+
+
         </ul>
     </div>
 
