change a clicked link to bold

--- a/nobel_prize_physics.html
+++ b/nobel_prize_physics.html
@@ -226,6 +226,9 @@
 
    
         jQuery('.papers').click(function(){
+            
+            $('.papers').css('font-weight', 'normal');
+            $(this).css('font-weight', 1000);
 
             var json_path = "./nobel_prize/physics/" + $(this).attr('id') + ".json";
             console.log(json_path);
