change a clicked link to bold

--- a/draw_red_networks.html
+++ b/draw_red_networks.html
@@ -189,6 +189,9 @@
 
    
         jQuery('.papers').click(function(){
+            
+            $('.papers').css('font-weight', 'normal');
+            $(this).css('font-weight', 1000);
 
             var json_path = $(this).attr('id') + ".json";
             console.log(json_path);
